--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <h2 class="header">
             Search
                 <span style="text-align: right; font-style: italic; display: flex; justify-content: flex-end;">
-                <a href="#" onclick="window.open('https://www.perplexity.ai/', '_blank');  window.open('https://poe.com/', '_blank'); window.open('https://you.com/', '_blank');  window.open('https://chat.openai.com/g/g-p1uPsAIqW-super-search', '_blank'); window.open('https://www.phind.com/search?home=true', '_blank'); window.open('https://metaphor.systems/', '_blank'); window.open('https://www.findera.ai/', '_blank');window.open('https://komo.ai/', '_blank');"> ⨠ &nbsp Open ALL 
+                <a href="#" onclick="window.open('https://www.perplexity.ai/', '_blank');  window.open('https://poe.com/', '_blank'); window.open('https://you.com/', '_blank');  window.open('https://chat.openai.com/g/g-p1uPsAIqW-super-search', '_blank'); window.open('https://www.phind.com/search?home=true', '_blank'); window.open('https://metaphor.systems/', '_blank'); window.open('https://www.findera.ai/', '_blank');window.open('https://komo.ai/', '_blank');"> ⨠ Open ALL 
                 </span>
                 </h2>
             <hr style=border-color:#ff6600>
@@ -134,7 +134,7 @@
                 
             <h2 class="header">Search(大陆)
                 <span style="text-align: right; font-style: italic; display: flex; justify-content: flex-end;">
-                <a href="#" onclick="window.open('https://metaso.cn/', '_blank'); window.open('https://so.360.com/');  window.open('https://search.tiangong.cn/', '_blank');"> ⨠ &nbsp Open ALL
+                <a href="#" onclick="window.open('https://metaso.cn/', '_blank'); window.open('https://so.360.com/');  window.open('https://search.tiangong.cn/', '_blank');"> ⨠ Open ALL
                 </span>
             </h2>
             <hr style=border-color:#ff6600>
