--- a/index.html
+++ b/index.html
@@ -172,8 +172,12 @@
                 <li class="item"><a href="https://chat.forefront.ai/">Forefront</a></li>
             </ul>
         </div>
+        
     </div>
 
+    <br>
+    <br>
+    
     <div class="flex-container">
         <div class="section">
             <h2 class="header">WIKI</h2>
@@ -186,12 +190,13 @@
             </ul>
         </div>
         <div class="section">
-            <h2 class="header">Writing</h2>
+            <h2 class="header">Summarizing YouTube Video</h2>
             <hr style=border-color:#ff6600>
             <ul>
-                <li class="item"><a href="https://app.wordtune.com/">Wordtune</a></li>
-                <li class="item"><a href="https://robbiefrontend.z22.web.core.windows.net/">Robbie Email Writer</a></li>
-                <li class="item"><a href="https://poe.com/10_Alt_Phrasings">Poe / 10 Alt. Phrasings</a></li>
+                <li class="item"><a href="https://summarize.ing/en">Summarize.ing<span style="font-size: 0.8em; font-style: italic;"> #20/day</span></a></li>
+                <li class="item"><a href="https://www.summarize.tech/">Summarize.tech<span style="font-size: 0.8em; font-style: italic;"> #daily limits</span></a>
+                <li class="item"><a href="https://tammy.ai/">tammy<span style="font-size: 0.8em; font-style: italic;"> #5/day</span></a>
+                <li class="item"><a href="https://transcriptal.com/">Transcriptal<span style="font-size: 0.8em; font-style: italic;"> #Transcription</span></a>
             </ul>
         </div>
     </div>
@@ -210,21 +215,21 @@
             </ul>
         </div>
         <div class="section">
-            <h2 class="header">Summarizing YouTube Video</h2>
+            <h2 class="header">Writing</h2>
             <hr style=border-color:#ff6600>
             <ul>
-                <li class="item"><a href="https://summarize.ing/en">Summarize.ing<span style="font-size: 0.8em; font-style: italic;"> #20/day</span></a></li>
-                <li class="item"><a href="https://www.summarize.tech/">Summarize.tech<span style="font-size: 0.8em; font-style: italic;"> #daily limits</span></a>
-                <li class="item"><a href="https://tammy.ai/">tammy<span style="font-size: 0.8em; font-style: italic;"> #5/day</span></a>
-                <li class="item"><a href="https://transcriptal.com/">Transcriptal<span style="font-size: 0.8em; font-style: italic;"> #Transcription</span></a>
+                <li class="item"><a href="https://app.wordtune.com/">Wordtune</a></li>
+                <li class="item"><a href="https://robbiefrontend.z22.web.core.windows.net/">Robbie Email Writer</a></li>
+                <li class="item"><a href="https://poe.com/10_Alt_Phrasings">Poe / 10 Alt. Phrasings</a></li>
             </ul>
         </div>
+
     </div>
 
 
     <div class="flex-container">
         <div class="section">
-            <h2 class="header">Hunting Tool</h2>
+            <h2 class="header">Hunting AI Tools</h2>
             <hr style=border-color:#ff6600>
             <ul>
                 <li class="item"><a href="https://www.producthunt.com/">Product Hunt</a></li>
