--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LLMs</title>
-
+    <link rel="icon" href="icon.ico">
+    
     <style>
         body {
             font-family: Arial, sans-serif;
