--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <li class="item"><a href="https://komo.ai/">KOMO Search</a></li>
             
 
-            <a href="https://poe.com/Search_Planner"><span style="line-height: 2em; text-decoration:overline; "> &nbsp⨠ Poe / Search Planner &nbsp</span></a>
+            <a href="https://poe.com/Search_Planner"><span style="line-height: 2em; text-decoration:overline; font-size: 0.9rem;"> &nbsp⨠ Poe / Search Planner &nbsp</span></a>
         </ul>
         </div>
       
