--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin-top: 5px;
+            margin-top: 0px;
             margin-bottom: 50px;
             padding: 0;
             background: #1b2736;
@@ -114,6 +114,20 @@
             cursor: pointer;
         }
 
+        .button-mobileview {
+            border: none;
+            background-color: #322e2b;
+            color: white;
+            font-size: 0.8rem;
+            padding: 0px 0px;
+            padding-left: 6px;
+            padding-right: 6px;
+            margin-top: -7px;
+            margin-bottom: -7px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+
         footer {
             text-align: center;
             font-size: 1rem;
@@ -132,6 +146,13 @@
 
 
 <body>
+
+    <div style="text-align: right;">
+        <span style="margin-right: 30px;">
+        <a href="mobile.html" target="_blank" class="button-searchplanner">Mobile View</a>
+        </span>
+    </div>
+
 
     <div class="flex-container">
         <div class="section">
