--- a/mobile.html
+++ b/mobile.html
@@ -132,7 +132,13 @@
 
 
 <body>
-
+    
+    <div style="text-align: right;">
+        <span style="margin-right: 30px;">
+            <a href="javascript:void(0);" onclick="window.location.href='index.html';" class="button-searchplanner">Desktop View</a>
+        </span>
+    </div>
+    
     <div class="section">
         <h2 class="header">LLMs</h2>
 
