--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
     <div style="text-align: right;">
         <span style="margin-right: 30px;">
-        <a href="mobile.html" target="_blank" class="button-searchplanner">Mobile View</a>
+            <a href="javascript:void(0);" onclick="window.location.href='mobile.html';" class="button-searchplanner">Mobile View</a>
         </span>
     </div>
 
