--- a/mobile.html
+++ b/mobile.html
@@ -104,6 +104,7 @@
             /* only for PoeSearchPlanner */
             display: inline-block;
             font-size: 0.9rem;
+            color: #ff6600;
             margin-top: 1%;
             padding-left: 10px;
             padding-right: 10px;
