--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
         .section {
             flex: 2; 
-            margin-left: 30px; 
-            margin-right: 30px; 
+            margin-left: 10px; 
+            margin-right: 10px; 
             margin-top: 0px;
         }
         
@@ -115,8 +115,6 @@
             cursor: pointer;
         }
 
- 
-
         #back-to-top {
             position: fixed;
             right: 50%;
@@ -189,6 +187,8 @@
                     "https://poe.com/",
                     "https://you.com/",
                     "https://chat.openai.com/g/g-p1uPsAIqW-super-search",
+                    "https://chat.openai.com/g/g-HMGSLbYxx-extensive-internet-search",
+                    "https://chat.openai.com/g/g-veSrMmasJ-keymate-ai-search-gpt",
                     "https://www.phind.com/search?Home=true",
                     "https://metaphor.systems/",
                     "https://www.findera.ai/",
@@ -208,6 +208,8 @@
                 <li class="item"><a href="https://poe.com/Web-Search">Poe / Web-Search</a></li>
                 <li class="item"><a href="https://you.com/">YOU.com<br/></a></li>
                 <li class="item"><a href="https://chat.openai.com/g/g-p1uPsAIqW-super-search">ChatGPT / Super Search<br/></a></li>
+                <li class="item"><a href="https://chat.openai.com/g/g-HMGSLbYxx-extensive-internet-search">ChatGPT / Extensive internet search<br/></a></li>
+                <li class="item"><a href="https://chat.openai.com/g/g-veSrMmasJ-keymate-ai-search-gpt">ChatGPT / Keymate.AI Search GPT<br/></a></li>
                 <li class="item"><a href="https://www.phind.com/search?home=true">Phind</a></li>
                 <li class="item"><a href="https://metaphor.systems/">Metaphor Search</a></li>
                 <li class="item"><a href="https://www.findera.ai/">Findera<span style="font-size: 0.8em; font-style: italic;"> powered by Groq</span></a></li>
