--- a/mobile.html
+++ b/mobile.html
@@ -18,8 +18,8 @@
 
 
         .section {
-            margin-left: 30px; 
-            margin-right: 30px; 
+            margin-left: 10px; 
+            margin-right: 10px; 
             margin-top: 30px;
             padding-top: 0.2rem;
             padding-bottom: 1rem;
@@ -185,6 +185,8 @@
                 "https://poe.com/",
                 "https://you.com/",
                 "https://chat.openai.com/g/g-p1uPsAIqW-super-search",
+                "https://chat.openai.com/g/g-HMGSLbYxx-extensive-internet-search",
+                "https://chat.openai.com/g/g-veSrMmasJ-keymate-ai-search-gpt",
                 "https://www.phind.com/search?Home=true",
                 "https://metaphor.systems/",
                 "https://www.findera.ai/",
@@ -204,6 +206,8 @@
             <li class="item"><a href="https://poe.com/Web-Search">Poe / Web-Search</a></li>
             <li class="item"><a href="https://you.com/">YOU.com<br/></a></li>
             <li class="item"><a href="https://chat.openai.com/g/g-p1uPsAIqW-super-search">ChatGPT / Super Search<br/></a></li>
+            <li class="item"><a href="https://chat.openai.com/g/g-HMGSLbYxx-extensive-internet-search">ChatGPT / Extensive internet search<br/></a></li>
+            <li class="item"><a href="https://chat.openai.com/g/g-veSrMmasJ-keymate-ai-search-gpt">ChatGPT / Keymate.AI Search GPT<br/></a></li>
             <li class="item"><a href="https://www.phind.com/search?home=true">Phind</a></li>
             <li class="item"><a href="https://metaphor.systems/">Metaphor Search</a></li>
             <li class="item"><a href="https://www.findera.ai/">Findera<span style="font-size: 0.8em; font-style: italic;"> powered by Groq</span></a></li>
