--- a/mobile.html
+++ b/mobile.html
@@ -124,6 +124,7 @@
             z-index: 999;
             width: 130px;
             height: 28px;
+            padding: 0;
             border: none;
             background-color: #d8d6d5a3;
             font-size: 0.9rem;
@@ -144,6 +145,7 @@
             z-index: 999;
             width: 130px;
             height: 28px;
+            padding: 0;
             border: none;
             background-color: #d8d6d5a3;
             font-size: 0.9rem;
