--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             color: #ff6600;
             margin-top: 30px;
             padding-bottom: 1px;
+            padding-left: 5px;
         }
 
         h1,
@@ -85,12 +86,12 @@
             border: none;
             background-color: #ff6600;
             color: white;
-            font-size: 0.8rem;
-            padding: 0px 0px;
+            font-size: 0.9rem;
             padding-left: 6px;
             padding-right: 6px;
-            margin-top: -7px;
-            margin-bottom: -7px;
+            padding-bottom: 2px;
+            margin-top: -12px;
+            margin-bottom: -12px;
             cursor: pointer;
             border-radius: 5px;
         }
@@ -105,9 +106,12 @@
             display: inline-block;
             font-size: 0.9rem;
             color: #ff6600;
+            font-weight: 600;
             margin-top: 3%;
             padding-left: 10px;
             padding-right: 10px;
+            padding-top: 3.5px;
+            padding-bottom: 3.5px;
             border: 1px solid #ff6600;
             border-radius: 5px;
             background-color: transparent;
@@ -136,7 +140,7 @@
         footer {
             text-align: center;
             font-size: 1rem;
-            margin: 2em
+            margin-top: 2em;
         }
         
         #footer img {
@@ -260,7 +264,7 @@
                 <li class="item"><a href="https://console.groq.com/playground">Groq Playground</a></li>
                 <li class="item"><a href="https://console.anthropic.com/login?selectAccount=true&returnTo=%2Fdashboard">Anthropic Console for Claude</a></li>
                 <li class="item"><a href="https://labs.perplexity.ai/">Perplexity Labs</a></li>
-                <li class="item"><a href="https://opengpts-example-vz4y4ooboq-uc.a.run.app/">OpenGPTs<span style="font-size: 0.8em; font-style: italic;"> by Langchain #closed</span></a></li>
+                <li class="item"><a href="https://opengpts-example-vz4y4ooboq-uc.a.run.app/">OpenGPTs<span style="font-size: 0.8em; font-style: italic;"> by Langchain</span></a></li>
             </ul>
         </div>
         
