--- a/mobile.html
+++ b/mobile.html
@@ -16,7 +16,6 @@
             color: #ffffff;
         }
 
-
         .section {
             margin-left: 10px; 
             margin-right: 10px; 
@@ -26,11 +25,11 @@
             padding-left: 1rem;
             padding-right: 1rem;
             border-radius: 18px;
-            background-color: #3c3b3e67;
+            background-color: #001524;
         }
         
         .header{
-            font-size: 1rem;
+            font-size: 1.1rem;
             color: #ff6600;
             margin-top: 20px;
             margin-bottom: 20px;
@@ -44,7 +43,7 @@
             letter-spacing: 0em;
             line-height: 0.2;
             font-weight: 600;
-            font-size: 1rem;
+            font-size: 1.1rem;
             margin-bottom: 0.5em;
 
         }
@@ -86,7 +85,7 @@
             border: none;
             background-color: #ff6600;
             color: white;
-            font-size: 0.8rem;
+            font-size: 1rem;
             padding: 0px 0px;
             padding-left: 6px;
             padding-right: 6px;
@@ -102,13 +101,16 @@
         }
 
         .button-searchplanner {
-            /* only for PoeSearchPlanner */
             display: inline-block;
-            font-size: 0.9rem;
+            font-size: 1rem;
+            font-weight: 600;
             color: #ff6600;
+            height: 28px;
             margin-top: 1%;
             padding-left: 10px;
             padding-right: 10px;
+            padding-top: 5px;
+            padding-bottom: 3.5px;
             border: 1px solid #ff6600;
             border-radius: 5px;
             background-color: transparent;
@@ -122,12 +124,13 @@
             bottom: 20px;
             transform: translate(50%, -50%);
             z-index: 999;
-            width: 130px;
+            width: 140px;
             height: 28px;
             padding: 0;
             border: none;
             background-color: #d8d6d5a3;
-            font-size: 0.9rem;
+            font-size: 1rem;
+            font-weight: 600;
             color: #ffffff;
             text-align: center;
             cursor: pointer;
@@ -143,12 +146,13 @@
             bottom: 60px;
             transform: translate(50%, -50%);
             z-index: 999;
-            width: 130px;
+            width: 140px;
             height: 28px;
             padding: 0;
             border: none;
             background-color: #d8d6d5a3;
-            font-size: 0.9rem;
+            font-size: 1rem;
+            font-weight: 600;
             color: #ffffff;
             text-align: center;
             cursor: pointer;
@@ -202,7 +206,7 @@
         #footer img {
             display: block;
             margin: 0 auto;
-            margin-bottom: 4rem;
+            margin-bottom: 6rem;
             max-width: 95%;
             max-height: 100%;
             mask: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
@@ -214,7 +218,6 @@
 
 
 <body>
-
 
 
     <div style="text-align: right;">
