--- a/mobile.html
+++ b/mobile.html
@@ -48,6 +48,13 @@
 
         }
 
+        p {
+            padding: 0em;
+            margin-top: 0.5em;
+            margin-bottom: 0em;
+            font-size: 0.9rem;
+        }
+
         ul {
             list-style: none;
             padding: 0em;
@@ -79,6 +86,8 @@
         a:hover {
             color: rgb(0, 244, 0);
             background-color: rgb(3, 31, 2);
+            font-weight: 600;
+            font-size: 1.1em;
         }
 
         button {
@@ -97,7 +106,7 @@
 
         .float-right {
             float: right;
-            margin-right: 2.5%;
+            margin-right: 1.5%;
         }
 
         .button-searchplanner {
@@ -110,7 +119,7 @@
             padding-left: 10px;
             padding-right: 10px;
             padding-top: 5px;
-            padding-bottom: 3.5px;
+            padding-bottom: 3px;
             border: 1px solid #ff6600;
             border-radius: 5px;
             background-color: transparent;
@@ -170,9 +179,9 @@
             min-height: 100px; /* 设置最小高度以确保内容空间 */
             background-color: #d8d6d5;
             color: black; 
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* 添加阴影以产生悬浮效果 */
-            border-radius: 10px; /* 添加圆角以软化设计 */
-            padding: 20px; /* 添加内边距以改善内容的显示 */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+            border-radius: 10px; 
+            padding: 20px;
             z-index: 998;
             opacity: 0;
             visibility: hidden;
@@ -188,13 +197,16 @@
             /* 菜单项样式 */
         .menu-item {
             padding: 5px;
-            border-bottom: 1px solid #ddd;
+            border-bottom: 1px solid white;
             cursor: pointer;
         }
 
             /* 菜单项选中样式 */
         .menu-item:hover {
-            background-color: #f5f5f5;
+            color: rgb(0, 244, 0);
+            background-color: rgb(3, 31, 2);
+            font-weight: 600;
+            font-size: 1.1em;
         }
 
         footer {
@@ -206,7 +218,7 @@
         #footer img {
             display: block;
             margin: 0 auto;
-            margin-bottom: 6rem;
+            margin-bottom: 8rem;
             max-width: 95%;
             max-height: 100%;
             mask: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
@@ -218,7 +230,6 @@
 
 
 <body>
-
 
     <div style="text-align: right;">
         <span style="margin-right: 30px;">
@@ -327,6 +338,7 @@
             <li class="item"><a href="https://console.anthropic.com/login?selectAccount=true&returnTo=%2Fdashboard">Anthropic Console for Claude</a></li>
             <li class="item"><a href="https://labs.perplexity.ai/">Perplexity Labs</a></li>
             <li class="item"><a href="https://opengpts-example-vz4y4ooboq-uc.a.run.app/">OpenGPTs<span style="font-size: 0.8em; font-style: italic;"> by Langchain</span></a></li>
+            <li class="item"><a href="https://www.ragarena.com/">RAG Arena</a></li>
         </ul>
     </div>
     
@@ -378,12 +390,15 @@
         <hr style=border-color:#ff6600>
 
         <ul>
-            <li class="item"><a href="https://chat.openai.com/g/g-bo0FiWLY7-consensus">ChatGPT /  Consensus</a></li>
-            <li class="item"><a href="https://chat.openai.com/g/g-M5VqHMebY-academic-paper-summary-for-learners">ChatGPT / Academic Paper Summary for Learners</a></li>
-            <li class="item"><a href="https://chat.openai.com/g/g-2snGs5H6C-academic-paper-summary-by-chapter">ChatGPT / Academic Paper Summary by Chapter</a></li>
+            <li class="item"><a href="https://chat.openai.com/g/g-M5VqHMebY-academic-paper-summary-for-learners">ChatGPT / Acad. Paper Sum. for Learners</a></li>
+            <li class="item"><a href="https://chat.openai.com/g/g-2snGs5H6C-academic-paper-summary-by-chapter">ChatGPT / Acad. Paper Sum. by Chapter</a></li>
             <li class="item"><a href="https://notebooklm.google/?location=us-only">Google NotebookLM<span style="font-size: 0.8em; font-style: italic;"> #US Only</span></a></li>
-            <li class="item"><a href="https://typeset.io/">SciSpace</a></li>                
+            <li class="item"><a href="https://typeset.io/">SciSpace</a></li>
+            <li class="item"><a href="https://consensus.app/search/">Consensus</a></li>               
             <li class="item"><a href="https://yiyibooks.cn/">一译<span style="font-size: 0.8em; font-style: italic;"> #Translation</span></a></li>
+            <p>&nbsp⁎ ChatGPT / GPTs: </p>
+            <p> &nbsp <a href="https://chat.openai.com/g/g-bo0FiWLY7-consensus"><span style="font-size: 0.7em;">&nbsp 🔗</span>Consensus</a>&nbsp<a href="https://chat.openai.com/g/g-NgAcklHd8-scispace"><span style="font-size: 0.7em;">&nbsp 🔗</span>SciSpace</a></p>
+            <p> &nbsp <a href="https://chat.openai.com/g/g-L2HknCZTC-scholarai"><span style="font-size: 0.7em;">&nbsp 🔗</span>ScholarAI</a>&nbsp<a href="https://chat.openai.com/g/g-UfFxTDMxq-askyourpdf-research-assistant"><span style="font-size: 0.7em;">&nbsp 🔗</span>AskYourPDF Research Asst.</a></p>
         </ul>
     </div>
 
@@ -416,15 +431,14 @@
     </div>
 
     <div class="section">
-        <h2 class="header">XXX 占位</h2>
+        <h2 class="header">Cloud for AI</h2>
 
         <hr style=border-color:#ff6600>
 
         <ul>
-            <li class="item"><a href="XXX">XXX<span style="font-size: 0.8em; font-style: italic;"> #XXX</span></a></li>
-            <li class="item"><a href="XXX">XXX<span style="font-size: 0.8em; font-style: italic;"> #XXX</span></a>
-            <li class="item"><a href="XXX">XXX<span style="font-size: 0.8em; font-style: italic;"> #XXX</span></a>
-            <li class="item"><a href="XXX">XXX<span style="font-size: 0.8em; font-style: italic;"> #XXX</span></a>
+            <li class="item"><a href="https://portal.azure.com/#home">Azure<span style="font-size: 0.8em; font-style: italic;"> #by Micorosft</span></a></li>
+            <li class="item"><a href="https://console.cloud.google.com/vertex-ai?hl=en&project=turing-poet-416719">Vertex<span style="font-size: 0.8em; font-style: italic;"> #by Google</span></a>
+            <li class="item"><a href="https://eu-central-1.console.aws.amazon.com/bedrock/home?region=eu-central-1#/">Bedrock<span style="font-size: 0.8em; font-style: italic;"> #by Amazon</span></a>
         </ul>
     </div>
 
