--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             <hr style=border-color:#ff6600>
 
             <ul>
-                <li class="item"><a href="https://chat.lmsys.org/">Chatbot Arena<span style="font-size: 0.8em; font-style: italic;"> by GitHub</span></a></li>
+                <li class="item"><a href="https://chat.lmsys.org/">Chatbot Arena<span style="font-size: 0.8em; font-style: italic;"> by UC Berkeley</span></a></li>
                 <li class="item"><a href="https://makersuite.google.com/app/prompts/new_freeform">Google AI Studio</a></li>
                 <li class="item"><a href="https://platform.openai.com/">OpenAI Playground</a></li>
                 <li class="item"><a href="https://console.groq.com/playground">Groq Playground</a></li>
@@ -273,6 +273,7 @@
                 <li class="item"><a href="https://labs.perplexity.ai/">Perplexity Labs</a></li>
                 <li class="item"><a href="https://opengpts-example-vz4y4ooboq-uc.a.run.app/">OpenGPTs<span style="font-size: 0.8em; font-style: italic;"> by Langchain</span></a></li>
                 <li class="item"><a href="https://www.ragarena.com/">RAG Arena</a></li>
+                <li class="item"><a href="https://huggingface.co/spaces/TTS-AGI/TTS-Arena">TTS Arena<span style="font-size: 0.8em; font-style: italic;"> by Hugging Face</span></a></li>                
             </ul>
         </div>
         
@@ -367,13 +368,14 @@
                 <li class="item"><a href="https://www.futurepedia.io/">Futurepedia</a></li>
                 <li class="item"><a href="https://www.futuretools.io/">Furure Tools</a></li>
                 <li class="item"><a href="https://opentools.ai/">Open Tools</a></li>
+                <li class="item"><a href="https://theresanaiforthat.com/">There's an AI for That</a></li>                
                 <li class="item"><a href="https://alternativeto.net/">AlternativeTo<span style="font-size: 0.8em; font-style: italic;"> #find alternatives</span></a></li>
                 <li class="item"><a href="https://www.similarsites.com/">SimilarSites<span style="font-size: 0.8em; font-style: italic;"> #find alternatives</span></a></li>
             </ul>
         </div>
 
         <div class="section">
-            <h2 class="header">Cloud for AI</h2>
+            <h2 class="header">Cloud Console</h2>
 
             <hr style=border-color:#ff6600>
 
