--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
         </div>
 
         <div class="section">
-            <h2 class="header">Summarizing YouTube Video</h2>
+            <h2 class="header">Summarizing YouTube</h2>
 
             <hr style=border-color:#ff6600>
 
@@ -335,7 +335,8 @@
                 <li class="item"><a href="https://chat.openai.com/g/g-2snGs5H6C-academic-paper-summary-by-chapter">ChatGPT / Acad. Paper Sum. by Chapter</a></li>
                 <li class="item"><a href="https://notebooklm.google/?location=us-only">Google NotebookLM<span style="font-size: 0.8em; font-style: italic;"> #US Only</span></a></li>
                 <li class="item"><a href="https://typeset.io/">SciSpace</a></li>
-                <li class="item"><a href="https://consensus.app/search/">Consensus</a></li>                
+                <li class="item"><a href="https://consensus.app/search/">Consensus</a></li>
+                <li class="item"><a href="https://www.chatpdf.com/">ChatPDF</a></li>                
                 <li class="item"><a href="https://yiyibooks.cn/">一译<span style="font-size: 0.8em; font-style: italic;"> #Translation</span></a></li>
                 <p>&nbsp⁎ ChatGPT / GPTs: </p>
                 <p> &nbsp <a href="https://chat.openai.com/g/g-bo0FiWLY7-consensus"><span style="font-size: 0.7em;">&nbsp 🔗</span>Consensus</a>&nbsp<a href="https://chat.openai.com/g/g-NgAcklHd8-scispace"><span style="font-size: 0.7em;">&nbsp 🔗</span>SciSpace</a></p>
