--- a/mobile.html
+++ b/mobile.html
@@ -119,7 +119,7 @@
             padding-left: 10px;
             padding-right: 10px;
             padding-top: 5px;
-            padding-bottom: 3px;
+            padding-bottom: 0px;
             border: 1px solid #ff6600;
             border-radius: 5px;
             background-color: transparent;
@@ -339,6 +339,7 @@
             <li class="item"><a href="https://labs.perplexity.ai/">Perplexity Labs</a></li>
             <li class="item"><a href="https://opengpts-example-vz4y4ooboq-uc.a.run.app/">OpenGPTs<span style="font-size: 0.8em; font-style: italic;"> by Langchain</span></a></li>
             <li class="item"><a href="https://www.ragarena.com/">RAG Arena</a></li>
+            <li class="item"><a href="https://huggingface.co/spaces/TTS-AGI/TTS-Arena">TTS Arena<span style="font-size: 0.8em; font-style: italic;"> by Hugging Face</span></a></li>  
         </ul>
     </div>
     
@@ -372,7 +373,7 @@
     </div>
 
     <div class="section">
-        <h2 class="header">Summarizing YouTube Video</h2>
+        <h2 class="header">Summarizing YouTube</h2>
 
         <hr style=border-color:#ff6600>
 
@@ -394,7 +395,8 @@
             <li class="item"><a href="https://chat.openai.com/g/g-2snGs5H6C-academic-paper-summary-by-chapter">ChatGPT / Acad. Paper Sum. by Chapter</a></li>
             <li class="item"><a href="https://notebooklm.google/?location=us-only">Google NotebookLM<span style="font-size: 0.8em; font-style: italic;"> #US Only</span></a></li>
             <li class="item"><a href="https://typeset.io/">SciSpace</a></li>
-            <li class="item"><a href="https://consensus.app/search/">Consensus</a></li>               
+            <li class="item"><a href="https://consensus.app/search/">Consensus</a></li>         
+            <li class="item"><a href="https://www.chatpdf.com/">ChatPDF</a></li>            
             <li class="item"><a href="https://yiyibooks.cn/">一译<span style="font-size: 0.8em; font-style: italic;"> #Translation</span></a></li>
             <p>&nbsp⁎ ChatGPT / GPTs: </p>
             <p> &nbsp <a href="https://chat.openai.com/g/g-bo0FiWLY7-consensus"><span style="font-size: 0.7em;">&nbsp 🔗</span>Consensus</a>&nbsp<a href="https://chat.openai.com/g/g-NgAcklHd8-scispace"><span style="font-size: 0.7em;">&nbsp 🔗</span>SciSpace</a></p>
