--- a/mobile.html
+++ b/mobile.html
@@ -331,7 +331,7 @@
         <hr style=border-color:#ff6600>
 
         <ul>
-            <li class="item"><a href="https://chat.lmsys.org/">Chatbot UC Berkeley<span style="font-size: 0.8em; font-style: italic;"> by GitHub</span></a></li>
+            <li class="item"><a href="https://chat.lmsys.org/">Chatbot Arena<span style="font-size: 0.8em; font-style: italic;"> by UC Berkeley</span></a></li>
             <li class="item"><a href="https://makersuite.google.com/app/prompts/new_freeform">Google AI Studio</a></li>
             <li class="item"><a href="https://platform.openai.com/">OpenAI Playground</a></li>
             <li class="item"><a href="https://console.groq.com/playground">Groq Playground</a></li>
