--- a/index.html
+++ b/index.html
@@ -287,6 +287,10 @@
                 <li class="item"><a href="https://huggingface.co/chat/">HuggingChat<span style="font-size: 0.8em; font-style: italic;"> by Hugging Face #open-source only</span></a></li>
                 <li class="item"><a href="https://groq.com/">Groq<span style="font-size: 0.8em; font-style: italic;"> #open-source only</span></a></li>
                 <li class="item"><a href="https://chat.forefront.ai/">Forefront</a></li>
+
+                <hr size="1">
+
+                <li class="item"><a href="https://www.mixturegpt.com/">MixtureGPT<span style="font-size: 0.8em; font-style: italic;"> #w. API</span></a></li>                
                 <li class="item"><a href="https://web.chatboxai.app/">ChatBox<span style="font-size: 0.8em; font-style: italic;"> #w. API</span></a></li>
                 <li class="item"><a href="https://www.chatbotui.com/">Chatbot UI<span style="font-size: 0.8em; font-style: italic;"> #w. API</span></a></li>
             </ul>
@@ -369,7 +373,10 @@
                 <li class="item"><a href="https://www.futurepedia.io/">Futurepedia</a></li>
                 <li class="item"><a href="https://www.futuretools.io/">Furure Tools</a></li>
                 <li class="item"><a href="https://opentools.ai/">Open Tools</a></li>
-                <li class="item"><a href="https://theresanaiforthat.com/">There's an AI for That</a></li>                
+                <li class="item"><a href="https://theresanaiforthat.com/">There's an AI for That</a></li>           
+                
+                <hr size="1">
+     
                 <li class="item"><a href="https://alternativeto.net/">AlternativeTo<span style="font-size: 0.8em; font-style: italic;"> #find alternatives</span></a></li>
                 <li class="item"><a href="https://www.similarsites.com/">SimilarSites<span style="font-size: 0.8em; font-style: italic;"> #find alternatives</span></a></li>
             </ul>
