--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 <li class="item"><a href="https://you.com/">YOU.com<br/></a></li>
                 <li class="item"><a href="https://chat.openai.com/g/g-p1uPsAIqW-super-search">ChatGPT / Super Search<br/></a></li>
                 <li class="item"><a href="https://chat.openai.com/g/g-HMGSLbYxx-extensive-internet-search">ChatGPT / Extensive Internet Search<br/></a></li>
-                <li class="item"><a href="https://chat.openai.com/g/g-veSrMmasJ-keymate-ai-search-gpt">ChatGPT / Keymate.AI Search GPT<br/></a></li>
+                <li class="item"><a href="https://chat.openai.com/g/g-veSrMmasJ-keymate-ai-search-gpt">ChatGPT / PDF Keymate AI Search<br/></a></li>
                 <li class="item"><a href="https://www.phind.com/search?home=true">Phind</a></li>
                 <li class="item"><a href="https://exa.ai/search?c=all">Exa Search</a></li>
                 <li class="item"><a href="https://www.findera.ai/">Findera<span style="font-size: 0.8em; font-style: italic;"> powered by Groq</span></a></li>
@@ -277,7 +277,7 @@
                 <li class="item"><a href="https://dashboard.cohere.com/playground/chat">Cohere Playground</a></li>
                 <li class="item"><a href="https://opengpts-example-vz4y4ooboq-uc.a.run.app/">OpenGPTs<span style="font-size: 0.8em; font-style: italic;"> by Langchain</span></a></li>
                 <li class="item"><a href="https://build.nvidia.com/explore/discover">Nvidia Build<span style="font-size: 0.8em; font-style: italic;"> # open-source only</span></a></li>
-
+                <li class="item"><a href="https://ai.azure.com/"> Azure AI Studio </a></li>
 
                 <hr size="1" style="width: 50%; margin-left: 0;">
 
@@ -306,6 +306,7 @@
                 
                 <hr size="1" style="width: 50%; margin-left: 0;">
 
+                <li class="item"><a href="https://www.tasking.ai/"> Tasking AI <span style="font-size: 0.8em; font-style: italic;"> # w. API </span></a></li> 
                 <li class="item"><a href="https://yichat.ai/"> YiCHAT <span style="font-size: 0.8em; font-style: italic;"> # w. API </span></a></li> 
                 <li class="item"><a href="https://www.mixturegpt.com/">MixtureGPT<span style="font-size: 0.8em; font-style: italic;"> # w. API</span></a></li> 
                 <li class="item"><a href="https://web.chatboxai.app/">ChatBox<span style="font-size: 0.8em; font-style: italic;"> # w. API</span></a></li>
