--- a/mobile.html
+++ b/mobile.html
@@ -29,7 +29,7 @@
         }
         
         .header{
-            font-size: 1.1rem;
+            font-size: 1.2rem;
             color: #ff6600;
             margin-top: 20px;
             margin-bottom: 20px;
@@ -43,7 +43,7 @@
             letter-spacing: 0em;
             line-height: 0.2;
             font-weight: 600;
-            font-size: 1.1rem;
+            font-size: 1.2rem;
             margin-bottom: 0.5em;
 
         }
@@ -52,7 +52,7 @@
             padding: 0em;
             margin-top: 0.5em;
             margin-bottom: 0em;
-            font-size: 0.9rem;
+            font-size: 1rem;
         }
 
         ul {
@@ -67,7 +67,7 @@
             display: flex;
             align-items: center;
             margin-top: 0.5em;
-            font-size: 0.9rem;
+            font-size: 1rem;
         }
 
         .item::before {
@@ -135,12 +135,12 @@
             bottom: 20px;
             transform: translate(50%, -50%);
             z-index: 999;
-            width: 140px;
-            height: 28px;
+            width: 160px;
+            height: 30px;
             padding: 0;
             border: none;
             background-color: #d8d6d5a3;
-            font-size: 1rem;
+            font-size: 1.2rem;
             font-weight: 600;
             color: #ffffff;
             text-align: center;
@@ -157,12 +157,12 @@
             bottom: 60px;
             transform: translate(50%, -50%);
             z-index: 999;
-            width: 140px;
-            height: 28px;
+            width: 160px;
+            height: 30px;
             padding: 0;
             border: none;
             background-color: #d8d6d5a3;
-            font-size: 1rem;
+            font-size: 1.2rem;
             font-weight: 600;
             color: #ffffff;
             text-align: center;
@@ -245,7 +245,7 @@
         <hr style=border-color:#ff6600>
 
         <ul>
-            <li class="item"><a href="https://chat.openai.com/">ChatGPT<span style="font-size: 0.8em; font-style: italic;"> by OpenAI</span></a></li>
+            <li class="item"><a href="https://chat.openai.com/">ChatGPT<span style="font-size: 0.8em; font-style: italic;"> by OpenAI</span> [↗] </a></li> 
             <li class="item"><a href="https://copilot.microsoft.com/">Microsoft Copilot</a></li>
             <li class="item"><a href="https://gemini.google.com/app">Gemini<span style="font-size: 0.8em; font-style: italic;"> by Google</span></a></li>
             <li class="item"><a href="https://claude.ai/chat/7e6cda4b-e744-4791-ac12-c2866c08235f">Claude<span style="font-size: 0.8em; font-style: italic;"> by Anthropic</span></a></li>
@@ -288,7 +288,7 @@
             <li class="item"><a href="https://you.com/">YOU.com<br/></a></li>
             <li class="item"><a href="https://chat.openai.com/g/g-p1uPsAIqW-super-search">ChatGPT / Super Search<br/></a></li>
             <li class="item"><a href="https://chat.openai.com/g/g-HMGSLbYxx-extensive-internet-search">ChatGPT / Extensive internet search<br/></a></li>
-            <li class="item"><a href="https://chat.openai.com/g/g-veSrMmasJ-keymate-ai-search-gpt">ChatGPT / Keymate.AI Search GPT<br/></a></li>
+            <li class="item"><a href="https://chat.openai.com/g/g-veSrMmasJ-keymate-ai-search-gpt">ChatGPT / PDF Keymate AI Search<br/></a></li>
             <li class="item"><a href="https://www.phind.com/search?home=true">Phind</a></li>
             <li class="item"><a href="https://metaphor.systems/">Metaphor Search</a></li>
             <li class="item"><a href="https://www.findera.ai/">Findera<span style="font-size: 0.8em; font-style: italic;"> powered by Groq</span></a></li>
@@ -343,6 +343,7 @@
             <li class="item"><a href="https://dashboard.cohere.com/playground/chat">Cohere Playground</a></li>
             <li class="item"><a href="https://opengpts-example-vz4y4ooboq-uc.a.run.app/">OpenGPTs<span style="font-size: 0.8em; font-style: italic;"> by Langchain</span></a></li>
             <li class="item"><a href="https://build.nvidia.com/explore/discover">Nvidia Build<span style="font-size: 0.8em; font-style: italic;"> # open-source only</span></a></li>
+            <li class="item"><a href="https://ai.azure.com/"> Azure AI Studio </a></li>
 
             <hr size="1" style="margin-left: 0;">
 
@@ -364,6 +365,7 @@
         <hr style=border-color:#ff6600>
 
         <ul>
+
             <li class="item"><a href="https://poe.com/">Poe<span style="font-size: 0.8em; font-style: italic;"> by Quora</span></a></li>
             <li class="item"><a href="https://huggingface.co/chat/">HuggingChat<span style="font-size: 0.8em; font-style: italic;"> by Hugging Face # open-source only</span></a></li>
             <li class="item"><a href="https://groq.com/">Groq<span style="font-size: 0.8em; font-style: italic;"> # open-source only</span></a></li>
@@ -371,6 +373,7 @@
                             
             <hr size="1" style="margin-left: 0;">
 
+            <li class="item"><a href="https://www.tasking.ai/"> Tasking AI <span style="font-size: 0.8em; font-style: italic;"> # w. API </span></a></li> 
             <li class="item"><a href="https://yichat.ai/">YiCHAT<span style="font-size: 0.8em; font-style: italic;"> # w. API</span></a></li>
             <li class="item"><a href="https://www.mixturegpt.com/">MixtureGPT<span style="font-size: 0.8em; font-style: italic;"> # w. API</span></a></li>     
             <li class="item"><a href="https://web.chatboxai.app/">ChatBox<span style="font-size: 0.8em; font-style: italic;"> # w. API</span></a></li>
