--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
             border-radius: 5px;
         }
 
+        button:active {
+            transform: scale(0.95);
+        }
+
         button:hover {
             color: rgb(0, 244, 0);
         }
@@ -130,6 +134,10 @@
             background-color: transparent;
             text-decoration: none;
             cursor: pointer;
+        }
+
+        .button-simple:active {
+            transform: scale(0.95);
         }
 
         #back-to-top {
@@ -231,9 +239,9 @@
                 <li class="item"><a href="https://www.perplexity.ai/">Perplexity Search</a></li>
                 <li class="item"><a href="https://poe.com/Web-Search">Poe / Web-Search</a></li>
                 <li class="item"><a href="https://you.com/">YOU.com<br/></a></li>
-                <li class="item"><a href="https://chat.openai.com/g/g-p1uPsAIqW-super-search"><img src="chatgpt-white.svg" width="18" height="18" alt="SVG图像" /> / Super Search<br/></a></li>
-                <li class="item"><a href="https://chat.openai.com/g/g-HMGSLbYxx-extensive-internet-search"><img src="chatgpt-white.svg" width="18" height="18" alt="SVG图像" /> / Extensive Internet Search<br/></a></li>
-                <li class="item"><a href="https://chat.openai.com/g/g-veSrMmasJ-keymate-ai-search-gpt"><img src="chatgpt-white.svg" width="18" height="18" alt="SVG图像" /> / PDF Keymate AI Search<br/></a></li>
+                <li class="item"><a href="https://chat.openai.com/g/g-p1uPsAIqW-super-search"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Super Search<br/></a></li>
+                <li class="item"><a href="https://chat.openai.com/g/g-HMGSLbYxx-extensive-internet-search"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Extensive Internet Search<br/></a></li>
+                <li class="item"><a href="https://chat.openai.com/g/g-veSrMmasJ-keymate-ai-search-gpt"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / PDF Keymate AI Search<br/></a></li>
                 <li class="item"><a href="https://www.phind.com/search?home=true">Phind</a></li>
                 <li class="item"><a href="https://exa.ai/search?c=all">Exa Search</a></li>
                 <li class="item"><a href="https://www.findera.ai/">Findera<span style="font-size: 0.8em; font-style: italic;"> powered by Groq</span></a></li>
@@ -370,16 +378,16 @@
             <hr style=border-color:#ff6600>
 
             <ul>
-                <li class="item"><a href="https://chat.openai.com/g/g-M5VqHMebY-academic-paper-summary-for-learners"><img src="chatgpt-white.svg" width="18" height="18" alt="SVG图像" /> / Academic Paper Sum. for Learners</a></li>
-                <li class="item"><a href="https://chat.openai.com/g/g-2snGs5H6C-academic-paper-summary-by-chapter"><img src="chatgpt-white.svg" width="18" height="18" alt="SVG图像" /> / Academic Paper Sum. by Chapter</a></li>
-                <li class="item"><a href="https://chat.openai.com/g/g-ujcnMvq3H"><img src="chatgpt-white.svg" width="18" height="18" alt="SVG图像" /> / Sum. Content （中文PPT形式）</a></li>                
+                <li class="item"><a href="https://chat.openai.com/g/g-M5VqHMebY-academic-paper-summary-for-learners"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Academic Paper Sum. for Learners</a></li>
+                <li class="item"><a href="https://chat.openai.com/g/g-2snGs5H6C-academic-paper-summary-by-chapter"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Academic Paper Sum. by Chapter</a></li>
+                <li class="item"><a href="https://chat.openai.com/g/g-ujcnMvq3H"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Sum. Content （中文PPT形式）</a></li>                
                 <li class="item"><a href="https://notebooklm.google/?location=us-only">Google NotebookLM<span style="font-size: 0.8em; font-style: italic;"> # US Only</span></a></li>
                 <li class="item"><a href="https://typeset.io/">SciSpace</a></li>
                 <li class="item"><a href="https://consensus.app/search/">Consensus</a></li>
                 <li class="item"><a href="https://www.chatpdf.com/">ChatPDF</a></li>
                 <li class="item"><a href="https://www.txyz.ai/?home">txyz</a></li>                
                 <li class="item"><a href="https://yiyibooks.cn/">一译<span style="font-size: 0.8em; font-style: italic;"> # Translation</span></a></li>
-                <p>&nbsp⁎ <img src="chatgpt-white.svg" width="18" height="18" alt="SVG图像" /> / GPTs: </p>
+                <p>&nbsp⁎ <img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / GPTs: </p>
                 <p> &nbsp <a href="https://chat.openai.com/g/g-bo0FiWLY7-consensus"><span style="font-size: 0.7em;">&nbsp 🔗</span>Consensus</a>&nbsp<a href="https://chat.openai.com/g/g-NgAcklHd8-scispace"><span style="font-size: 0.7em;">&nbsp 🔗</span>SciSpace</a></p>
                 <p> &nbsp <a href="https://chat.openai.com/g/g-L2HknCZTC-scholarai"><span style="font-size: 0.7em;">&nbsp 🔗</span>ScholarAI</a>&nbsp<a href="https://chat.openai.com/g/g-UfFxTDMxq-askyourpdf-research-assistant"><span style="font-size: 0.7em;">&nbsp 🔗</span>AskYourPDF Research Asst.</a></p>
             </ul>
