--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
                 <li class="item"><a href="https://chat.mistral.ai/">Mistral</a></li>
                 <li class="item"><a href="https://pi.ai/talk">Pi, personal AI</a></li>
                 <li class="item"><a href="https://cohere.com/">Cohere</a></li>
+                <li class="item"><a href="https://chat.reka.ai/chat">Reka</a></li>                
             </ul>
         </div>
         
@@ -380,6 +381,7 @@
             <ul>
                 <li class="item"><a href="https://chat.openai.com/g/g-M5VqHMebY-academic-paper-summary-for-learners"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Academic Paper Sum. for Learners</a></li>
                 <li class="item"><a href="https://chat.openai.com/g/g-2snGs5H6C-academic-paper-summary-by-chapter"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Academic Paper Sum. by Chapter</a></li>
+                <li class="item"><a href="https://chat.openai.com/g/g-NjfOntUt3-understanding-papers"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Understanding Papers</a></li>
                 <li class="item"><a href="https://chat.openai.com/g/g-ujcnMvq3H"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Sum. Content （中文PPT形式）</a></li>                
                 <li class="item"><a href="https://notebooklm.google/?location=us-only">Google NotebookLM<span style="font-size: 0.8em; font-style: italic;"> # US Only</span></a></li>
                 <li class="item"><a href="https://typeset.io/">SciSpace</a></li>
