--- a/mobile.html
+++ b/mobile.html
@@ -154,7 +154,7 @@
             cursor: pointer;
             overflow: hidden;
             transition: height 0.3s ease;
-            background-color: #001524;
+            background-color: #0015246d;
         }
         .card p {
             margin: 0;
@@ -166,6 +166,7 @@
         }
         .card.expanded {
             height: auto;
+            background-color: #001524;
         }
         .card.expanded .urls {
             height: auto;
@@ -203,6 +204,7 @@
     <h2 class="header">LLMs</h2>
 
     <div class="urls">
+        <hr style=border-color:#ff6600>
         <ul>
             <li class="item"><a href="https://chat.openai.com/">ChatGPT<span style="font-size: 0.8em; font-style: italic;"> by OpenAI</span></a></li> 
             <li class="item"><a href="https://copilot.microsoft.com/">Microsoft Copilot</a></li>
@@ -242,6 +244,7 @@
         </h2>
 
     <div class="urls">
+        <hr style=border-color:#ff6600>
         <ul>
             <li class="item"><a href="https://www.perplexity.ai/">Perplexity Search</a></li>
             <li class="item"><a href="https://poe.com/Web-Search">Poe / Web-Search</a></li>
@@ -279,6 +282,7 @@
         </h2>
 
     <div class="urls">
+        <hr style=border-color:#ff6600>
         <ul>
             <li class="item"><a href="https://metaso.cn/">秘塔 AI 搜索</a></li>
             <li class="item"><a href="https://so.360.com/">360 AI 搜索</a></li>
@@ -291,6 +295,7 @@
     <h2 class="header">Playground / API</h2>
 
     <div class="urls">
+        <hr style=border-color:#ff6600>
         <ul>
             <li class="item"><a href="https://chat.lmsys.org/">Chatbot Arena<span style="font-size: 0.8em; font-style: italic;"> by UC Berkeley</span></a></li>
             <li class="item"><a href="https://makersuite.google.com/app/prompts/new_freeform">Google AI Studio</a></li>
@@ -322,6 +327,7 @@
     <h2 class="header">Multiple LLMs</h2>
 
     <div class="urls">
+        <hr style=border-color:#ff6600>
         <ul>
             <li class="item"><a href="https://poe.com/">Poe<span style="font-size: 0.8em; font-style: italic;"> by Quora</span></a></li>
             <li class="item"><a href="https://huggingface.co/chat/">HuggingChat<span style="font-size: 0.8em; font-style: italic;"> by Hugging Face # open-source only</span></a></li>
@@ -343,6 +349,7 @@
     <h2 class="header">WIKI & FinTech</h2>
 
     <div class="urls">
+        <hr style=border-color:#ff6600>
         <ul>
             <li class="item"><a href="https://explorer.globe.engineer/">Globe Explorer</a></li>
             <li class="item"><a href="https://www.wolframalpha.com/">Wolfram Alpha</a></li>
@@ -362,6 +369,7 @@
     <h2 class="header">Summarizing YouTube</h2>
 
     <div class="urls">
+        <hr style=border-color:#ff6600>
         <ul>
             <li class="item"><a href="https://summarize.ing/en">Summarize.ing<span style="font-size: 0.8em; font-style: italic;"> # 20/day</span></a></li>
             <li class="item"><a href="https://www.summarize.tech/">Summarize.tech<span style="font-size: 0.8em; font-style: italic;"> # daily limits</span></a>
@@ -376,6 +384,7 @@
 
 
     <div class="urls">
+        <hr style=border-color:#ff6600>
         <ul>
             <li class="item"><a href="https://chat.openai.com/g/g-M5VqHMebY-academic-paper-summary-for-learners"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Academic Paper Sum. for Learners</a></li>
             <li class="item"><a href="https://chat.openai.com/g/g-2snGs5H6C-academic-paper-summary-by-chapter"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Academic Paper Sum. by Chapter</a></li>
@@ -398,6 +407,7 @@
     <h2 class="header">Writing & Coding</h2>
 
     <div class="urls">
+        <hr style=border-color:#ff6600>
         <ul>
             <li class="item"><a href="https://app.wordtune.com/"> Wordtune <span style="font-size: 0.8em; font-style: italic;"> by AI21 Labs</span></a></li>
             <li class="item"><a href="https://robbiefrontend.z22.web.core.windows.net/">Robbie Email Writer</a></li>
@@ -420,6 +430,7 @@
     <h2 class="header">Hunting AI Tools</h2>
 
     <div class="urls">
+        <hr style=border-color:#ff6600>
         <ul>
             <li class="item"><a href="https://www.producthunt.com/">Product Hunt</a></li>
             <li class="item"><a href="https://www.futurepedia.io/">Futurepedia</a></li>
@@ -439,6 +450,7 @@
     <h2 class="header">Cloud Console</h2>
 
     <div class="urls">
+        <hr style=border-color:#ff6600>
         <ul>
             <li class="item"><a href="https://portal.azure.com/#home">Azure<span style="font-size: 0.8em; font-style: italic;"> # by Micorosft</span></a></li>
             <li class="item"><a href="https://console.cloud.google.com/vertex-ai?hl=en&project=turing-poet-416719">Vertex<span style="font-size: 0.8em; font-style: italic;"> # by Google</span></a>
