--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@
                 <li class="item"><a href="https://opengpts-example-vz4y4ooboq-uc.a.run.app/">OpenGPTs<span style="font-size: 0.8em; font-style: italic;"> by Langchain</span></a></li>
                 <li class="item"><a href="https://build.nvidia.com/explore/discover">Nvidia Build<span style="font-size: 0.8em; font-style: italic;"> # open-source only</span></a></li>
                 <li class="item"><a href="https://ai.azure.com/"> Azure AI Studio </a></li>
+                <li class="item"><a href="https://playground.ai.cloudflare.com/"> Cloudflare <span style="font-size: 0.8em; font-style: italic;"> # open-source only</span></a></li>
 
                 <hr size="1" style="width: 50%; margin-left: 0;">
 
