--- a/mobile.html
+++ b/mobile.html
@@ -184,7 +184,7 @@
         #footer img {
             display: block;
             margin: 0 auto;
-            margin-bottom: 8rem;
+            margin-bottom: 2rem;
             max-width: 95%;
             max-height: 100%;
             mask: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
@@ -307,6 +307,7 @@
             <li class="item"><a href="https://opengpts-example-vz4y4ooboq-uc.a.run.app/">OpenGPTs<span style="font-size: 0.8em; font-style: italic;"> by Langchain</span></a></li>
             <li class="item"><a href="https://build.nvidia.com/explore/discover">Nvidia Build<span style="font-size: 0.8em; font-style: italic;"> # open-source only</span></a></li>
             <li class="item"><a href="https://ai.azure.com/"> Azure AI Studio </a></li>
+            <li class="item"><a href="https://playground.ai.cloudflare.com/"> Cloudflare <span style="font-size: 0.8em; font-style: italic;"> # open-source only</span></a></li>
 
             <hr size="1" style="margin-left: 0;">
 
